# sui-hackathon

./: .gitignore
.docker/: compose.build.yaml  compose.yaml
.github/workflows/: deploy.yml  mail.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0cc2dbd5ce172fe377eed0c43e26806a60119b53b6cc4c2e9025e451da3fd9c2.json  query-3e6f6d24dbef2717180649e4d257731f077fc7386a9f335f5f7241ef876cc829.json  query-55601c23e7d7d2d6f896a54638027adf2777fd6e39977dd0b7d7c481554847bc.json  query-575aee543f2893cbbe4593dda5addeeae8c04cacea1257b39922e41628cda0ee.json  query-6783fd3ac6bbd35ba11d0c8322cc353ed755b5e7f26bfa6aa3b595c111a57271.json  query-6e1263328b7140832d87c56218e8bf51a2988bd03ca5929913a9a20f3edc7af7.json  query-8f9974e7cc3af387140d85da66f796ae27ca7c7525b74581808888d89bb6e651.json  query-95c9b0b0981ebce69219a499ba83f4bd54f09caf40e026c72543d4cec6520fc8.json  query-ab7b00d301ce17ef3842340dbec0ebfa105eb4f6cf8f00ba72ae5b6126ce616b.json  query-d39f81a65dedb1e506a197db1d62977a1b8320832171e0d7bb2aa6b6a9eae3dd.json  query-d4833972fbe17f19b2237ed40ed722c6d64380125756672f103243ebff872b4e.json  query-d520a5a33536d076e34adc9232c894a904b345094a703e47294bf478f60f3849.json  query-db12f8a534ac56388dc436a0b8a2634ffbd8a703a31d0c36cce282af911e8740.json  query-f601cf6df8539832a206f75a17fcd6fc8c792ffaba1aa5351a26d67188b0d744.json  query-f7b44400a32044dd03add3661370e39ba21c837687eea108ed609f47e71cc529.json
backend/migrations/: 20250530143713_account.up.sql  20250531060630_account_name.down.sql  20250531060630_account_name.up.sql  20250531061117_remove_password.down.sql  20250531061117_remove_password.up.sql  20250531070138_video.up.sql  20250531212556_vectorized_video_fields.down.sql  20250531212556_vectorized_video_fields.up.sql
backend/src/: config.rs  database.rs  doc.rs  main.rs  state.rs
backend/src/controller/: mod.rs
backend/src/controller/auth/: google.rs  me.rs  microsoft.rs  mod.rs
backend/src/controller/video/: get.rs  get_all.rs  get_suggestion.rs  mod.rs  my.rs  query_all.rs  react.rs  upload.rs
backend/src/database/: account.rs  mod.rs  video.rs
backend/src/error/: auth.rs  mod.rs
backend/src/middleware/: cors.rs
backend/src/util/: mod.rs  video.rs  walrus.rs
backend/src/util/auth/: claims.rs  mod.rs  oidc.rs
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  layout.tsx  main.tsx
frontend/src/api/: auth.ts  index.ts  video.ts
frontend/src/components/: account.tsx  header.tsx  logo.tsx  video-card.tsx  video-list.tsx
frontend/src/components/ui/: textarea-autosize.tsx
frontend/src/components/ui/backgrounds/: stars.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: home.tsx  login.tsx  profile.tsx  upload.tsx  watch.tsx
