[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
axum_typed_multipart = "0.16.2"
chrono = "0.4.41"
config = { version = "0.15.11", default-features = false }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
openidconnect = "4.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde"] }
